updated translations and updated profile page with additional phone number options

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -72,6 +72,7 @@
   "App.profile.updateProfileText": "Your profile has been update!",
   "App.profile.updateProfileButton": "Update Profile",
   "App.profile.optInTexts": "I want to receive text messages when there are new jobs.",
+  "App.profile.optInWhatsappMessages": "I want to receive Whatsapp messages when there are new jobs.",
   "App.profile.subscribeToMailingList": "I want to receive email messages when there are new jobs.",
   "App.profile.updateProfile": "Update your profile.",
   "App.profile.incompleteJobs": "List of all jobs that are still open.",
@@ -173,6 +174,8 @@
   "App.codeOfCode.paragraph1": "We as creators and maintainers of Travay pledge to making participation in our community a harassment-free experience for everyone, regardless of age, body size, disability, ethnicity, gender identity and expression, level of experience, nationality, personal appearance, race, religion, or sexual identity and orientation.",
   "App.codeOfCode.mission": "Our Mission",
   "App.codeOfCode.paragraph2": "Travay’s mission is to cultivate the talent of everyday citizens for creating a restored community and economic opportunity at scale. Our 3 core values are:",
+  "App.getStarted.getInPersonHelp1": "Si ou bezwen èd pou w konekte, nou gen moun ki ap ofri èd gratis",
+  "App.getStarted.getInPersonHelp2": "Enskri la a",
   "App.getStarted.title": "Quickly Get Started",
   "App.getStarted.note": "Note: Travay is not available on iPhone.",
   "App.getStarted.jobWorkersTitle": "Job Workers",
