--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -72,6 +72,7 @@
   "App.profile.updateProfileText": "Pwofil ou aktyalize!",
   "App.profile.updateProfileButton": "Korije",
   "App.profile.optInTexts": "Mwen vle resevwa mesaj tèks lè gen nouvo djòb.",
+  "App.profile.optInWhatsappMessages": "Mwen vle resevwa mesaj Whatsapp lè gen nouvo djòb.",
   "App.profile.subscribeToMailingList": "Mwen vle resevwa mesaj imel lè gen nouvo djòb.",
   "App.profile.updateProfile": "Mete pwofil ou.",
   "App.profile.incompleteJobs": "Lis tout travay ki toujou louvri.",
@@ -173,6 +174,8 @@
   "App.codeOfCode.paragraph1": "Nou kòm kreyatè ak antretyen nan Travay angajman pou fè patisipasyon nan kominote nou an yon eksperyans pèsekisyon pou tout moun, kèlkeswa laj, gwosè kò, enfimite, etnisite, idantite seksyèl ak ekspresyon, nivo eksperyans, nasyonalite, aparans pèsonèl, ras, relijyon , oswa idantite seksyèl ak oryantasyon.",
   "App.codeOfCode.mission": "Misyon nou",
   "App.codeOfCode.paragraph2": "Misyon Travay la se kiltive talan nan sitwayen chak jou pou kreye yon kominote restore ak opòtinite ekonomik nan echèl la. Nou 3 valè debaz yo se:",
+  "App.getStarted.getInPersonHelp1": "Si ou bezwen èd pou w konekte, nou gen moun ki ap ofri èd gratis",
+  "App.getStarted.getInPersonHelp2": "Enskri la a",
   "App.getStarted.title": "Byen vit kòmanse",
   "App.getStarted.note": "Remak: Travay pa disponib sou iPhone.",
   "App.getStarted.jobWorkersTitle": "Travayè",
