updated translations for tip page

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -49,11 +49,13 @@
   "App.sectionFour.bullet4": "Your Job Manager will approve work and issue payment",
   "App.sectionFour.paragraph": "Find a job, claim it with no experience needed!",
   "App.helloMetaMask.unsupportedNetwork": "This is an unsupported network. Please switch to the Main Network.",
+  "App.tip.receiverPlaceholderText": "Receiver",
+  "App.tip.AmountPlaceholderText": "Amount in USD",
   "App.tip.sendTipButton": "Send Tip",
   "App.tip.tipSentTitle": "Success!",
   "App.tip.tipSentText": "Your DAI transfer is complete!",
   "App.tip.tipPageTitle": "Tip Anyone!",
-  "App.tip.tipPageDescription": "Send cryptocurrency (DAI) to anyone. For a job well done, for a service, for rent, food and more. Remember that $1 DAI is equal to $1",
+  "App.tip.tipPageDescription": "Send cryptocurrency (DAI) to anyone. For a job well done, for a service, for rent, food and more. Remember that $1 DAI is equal to $1 USD.",
   "App.tip.receiverDescription": "Paste in the ethereum address of the person who should receive your DAI. Remember this is irreversible so make sure you have the right address!",
   "App.tip.amountDescription": "Enter how much you would like to send in USD.",
   "App.job.editProfileIcon": "Editing Profile",
