--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -49,12 +49,14 @@
   "App.sectionFour.bullet4": "Manadjè travay ou ap apwouve travay ak peman pwoblèm",
   "App.sectionFour.paragraph": "Jwenn yon travay, reklame li ki pa gen okenn eksperyans ki nesesè!",
   "App.helloMetaMask.unsupportedNetwork": "Sa a se yon rezo sipòte. Tanpri chanje nan Rezo a Main (Main Network).",
+  "App.tip.receiverPlaceholderText": "Reseptè",
+  "App.tip.AmountPlaceholderText": "Kantite lajan nan USD dola",
   "App.tip.sendTipButton": "Voye tep",
   "App.tip.tipSentTitle": "Siksè!",
   "App.tip.tipSentText": "Transfè DAI ou konplè!",
   "App.job.editProfileIcon": "Korije Pwofil",
   "App.tip.tipPageTitle": "Ide Nenpòt moun!",
-  "App.tip.tipPageDescription": "Voye kriptomonè (DAI) pou nenpòt moun. Pou yon travay byen fè, pou yon sèvis, pou lwaye, manje ak plis ankò. Sonje ke DAI $ 1 egal a $ 1",
+  "App.tip.tipPageDescription": "Voye kriptomonè (DAI) pou nenpòt moun. Pou yon travay byen fè, pou yon sèvis, pou lwaye, manje ak plis ankò. Sonje ke DAI $ 1 egal a $ 1 US dola.",
   "App.tip.receiverDescription": "Mete nan Ethereum adrès moun ki ta sipoze resevwa lajan DAI ou a. Pa bliye, sonje ke sa irevèsib (paka anile), pou sa asire'w ke ou gen bon adrès la!",
   "App.tip.amountDescription": "Antre nan konbyen lajan ou ta renmen voye an USD.",
   "App.job.notEditingProfileIcon": "Korije Pwofil",
