--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -177,7 +177,7 @@
   "App.codeOfCode.mission": "Misyon nou",
   "App.codeOfCode.paragraph2": "Misyon Travay la se kiltive talan nan sitwayen chak jou pou kreye yon kominote restore ak opòtinite ekonomik nan echèl la. Nou 3 valè debaz yo se:",
   "App.getStarted.getInPersonHelp1": "Si ou bezwen èd pou w konekte, nou gen moun ki ap ofri èd gratis",
-  "App.getStarted.getInPersonHelp2": "Enskri la a",
+  "App.getStarted.getInPersonHelp2": "enskri la a",
   "App.getStarted.title": "Byen vit kòmanse",
   "App.getStarted.note": "Remak: Travay pa disponib sou iPhone.",
   "App.getStarted.jobWorkersTitle": "Travayè",
