adding pricing page

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -150,6 +150,9 @@
   "App.jobs.pageSubtitle": "Here you'll find 6-month and 12-month jobs.",
   "App.jobs.search": "Search",
   "App.jobs.filter": "Filter",
+  "App.pricing.getStartedButton": "Get Started",
+  "App.createJob.pricing1": "Learn more about pricing",
+  "App.createJob.pricing2": "here",
   "App.createJob.JobDescriptionInForm": "Job Description",
   "App.createJob.requirementInForm": "Requirement for Job to be Complete",
   "App.createJob.nrMonthsInForm": "Number of Months of Employment",
