--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -150,6 +150,9 @@
   "App.jobs.pageSubtitle": "Men w ap jwenn travay 6 mwa ak 12 mwa.",
   "App.jobs.search": "Rechèch",
   "App.jobs.filter": "Filtre",
+  "App.pricing.getStartedButton": "Kòmanse",
+  "App.createJob.pricing1": "Aprann plis sou prix",
+  "App.createJob.pricing2": "isit la",
   "App.createJob.JobDescriptionInForm": "Deskripsyon nan travay la",
   "App.createJob.requirementInForm": "Obligasyon pou travay la dwe ranpli",
   "App.createJob.nrMonthsInForm": "Kantite Mwa Travay",
