Detect if someone is not using Firefox and give them a warning

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -21,6 +21,7 @@
   "App.helloMetaMask.balance": "Balans",
   "App.helloMetaMask.notMainNet": "Nan moman ou poko sou Rezo Prensipal la, tanpri chanje, ale sou Rezo Prensipal la pou ou ka itilize aplikasyon an.",
   "App.helloMetaMask.unlockMetaMask": "Tanpri Debloke MetaMask",
+  "App.helloFirefox.switchToFirefox": "You are not currently using the Firefox browser. To use this application you must switch to FireFox.",
   "App.home.howToKnowOfNewJobs": "Koman map fè poum konnen lè genyen yon travay ki disponible?",
   "App.home.earn": "Fè lajan ki estab",
   "App.home.sameDayJobs": "Ou pa bezwen CV, premye ki aplike a jwenn travay la.",
