--- a/i18n/en.json
+++ b/i18n/en.json
@@ -21,6 +21,7 @@
   "App.helloMetaMask.balance": "Balance",
   "App.helloMetaMask.notMainNet": "You are not currently on the Main Network, please switch to the Main Network to use this application.",
   "App.helloMetaMask.unlockMetaMask": "Please Unlock MetaMask",
+  "App.helloFirefox.switchToFirefox": "You are not currently using the Firefox browser. To use this application you must switch to FireFox.",
   "App.home.howToKnowOfNewJobs": "How Will I know When There Are New Jobs?",
   "App.home.earn": "Earn Stable Income",
   "App.home.sameDayJobs": "Same Day Jobs Marketplace",
