WIP adding algolia

--- a/i18n/en.json
+++ b/i18n/en.json
@@ -15,6 +15,7 @@
   "App.signInModal.googleSignIn": "Sign In with Google",
   "App.signInModal.signOutWarning": "Remember to also sign out of MetaMask, to prevent phishing. Learn more about phishing here: https://fr.wikipedia.org/wiki/Hame%C3%A7onnage.",
   "App.signInModal.googleSignOut": "Sign Out with Google",
+  "App.helloMetaMask.connectMetaMaskButton": "CONNECT METAMASK",
   "App.helloMetaMask.installed": "Installed",
   "App.helloMetaMask.network": "Network",
   "App.helloMetaMask.account": "Ethereum Account",
