added translations for pricing page

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -153,6 +153,19 @@
   "App.jobs.search": "Rechèch",
   "App.jobs.filter": "Filtre",
   "App.pricing.getStartedButton": "Kòmanse",
+  "App.pricing.2PercentPanelTitle": "Pi Bon Kontra",
+  "App.pricing.2PercentPanelSubtitle": "Ou gen sa.",
+  "App.pricing.2PercentPara1": "Pousantaj chaj nan total salè nan USD.",
+  "App.pricing.2PercentPara2": "Ou afiche yon travay ak moun ki dirèkteman chwazi travay ou. Lè ou finanse yon travay, 2% nan kantite lajan total ki antre nan salè a otomatikman dedui e travayè a resevwa rès 98%. Nou resevwa 2%.",
+  "App.pricing.pageTitle": "Pri toujou transparan",
+  "App.pricing.30PanelTitle": "Bon Kontra",
+  "App.pricing.30PanelSubtitle": "Nou fè travay la.",
+  "App.pricing.30Para1": "Nou afiche ak rekrite pou pozisyon ou.",
+  "App.pricing.30Para2": "Ou vle kòmanse kounye a?",
+  "App.pricing.30bullet1": "Klike la a epi voye yon peman $ 30 avèk salè pou travay la. Frè 2% anwo a toujou aplike a salè",
+  "App.pricing.30bullet2": "Klike la a pou ranpli yon fòm ak detay sou travay ou",
+  "App.pricing.30bullet3": "Nou pral fè w konnen lè pozisyon an afiche epi kandida yo disponib pou pozisyon ou.",
+  "App.pricing.30Para3": "Remak: frè $ 30 USD pou yon sèl fwa a pa ranbousab.",
   "App.createJob.pricing1": "Aprann plis sou prix",
   "App.createJob.pricing2": "isit la",
   "App.createJob.JobDescriptionInForm": "Deskripsyon nan travay la",
