--- a/i18n/en.json
+++ b/i18n/en.json
@@ -153,6 +153,19 @@
   "App.jobs.search": "Search",
   "App.jobs.filter": "Filter",
   "App.pricing.getStartedButton": "Get Started",
+  "App.pricing.2PercentPanelTitle": "Best Deal",
+  "App.pricing.2PercentPanelSubtitle": "You got this.",
+  "App.pricing.2PercentPara1": "One-Time Percentage Fee of Total Salary in USD.",
+  "App.pricing.2PercentPara2": "You post a job and individuals directly select your job. When you fund a job, 2% of the total amount entered for the salary is auto deducted and the worker receives the remaining 98%. We receive the 2%.",
+  "App.pricing.pageTitle": "Always Transparent Pricing",
+  "App.pricing.30PanelTitle": "Good Deal",
+  "App.pricing.30PanelSubtitle": "We do the work",
+  "App.pricing.30Para1": "We post and recruit for your job position.",
+  "App.pricing.30Para2": "Ready to get started?",
+  "App.pricing.30bullet1": "Click here and send a $30 payment with the salary for the job. The 2% fee above still applies on the salary",
+  "App.pricing.30bullet2": "Click here to complete a form with your job details",
+  "App.pricing.30bullet3": "We'll notify you when the job is posted and there are candidates available for your job",
+  "App.pricing.30Para3": "Note: the one-time $30 fee is non-refundable.",
   "App.createJob.pricing1": "Learn more about pricing",
   "App.createJob.pricing2": "here",
   "App.createJob.JobDescriptionInForm": "Job Description",
