updated translations and added gas price calc in tip page

--- a/i18n/ht.json
+++ b/i18n/ht.json
@@ -57,7 +57,7 @@
   "App.tip.tipSentTitle": "Siksè!",
   "App.tip.tipSentText": "Transfè DAI ou konplè!",
   "App.job.editProfileIcon": "Korije Pwofil",
-  "App.tip.tipPageTitle": "Ide Nenpòt moun!",
+  "App.tip.tipPageTitle": "Ide Nenpòt Moun!",
   "App.tip.tipPageDescription": "Voye kriptomonè (DAI) pou nenpòt moun. Pou yon travay byen fè, pou yon sèvis, pou lwaye, manje ak plis ankò. Sonje ke DAI $ 1 egal a $ 1 US dola.",
   "App.tip.receiverDescription": "Mete nan Ethereum adrès moun ki ta sipoze resevwa lajan DAI ou a. Pa bliye, sonje ke sa irevèsib (paka anile), pou sa asire'w ke ou gen bon adrès la!",
   "App.tip.amountDescription": "Antre nan konbyen lajan ou ta renmen voye an USD.",
